--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-plugin-jest": "^22.3.0",
+    "font-awesome": "^4.7.0",
     "formik": "^1.5.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
