--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.4.11",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
