--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.3",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
@@ -31,7 +32,7 @@
     "eslint-plugin-react": "^7.11.0"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
