--- a/server/src/server/config/config.json
+++ b/server/src/server/config/config.json
@@ -1,11 +1,9 @@
-
-
 {
     "development": {
         "username": "postgres",
         "password": "password",
         "database": "todo-dev",
-        "host": "db-dev",
+        "host": "localhost",
         "dialect": "postgres",
         "operatorsAliases": "Op",
         "jwtSecret": "babura"
