--- a/server/src/server/config/config.json
+++ b/server/src/server/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "postgres",
         "password": "password",
-        "database": "todo-dev",
+        "database": "postgres",
         "host": "localhost",
         "dialect": "postgres",
         "operatorsAliases": "Op",
