--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-react": "^7.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
