--- a/server/src/server/config/config.json
+++ b/server/src/server/config/config.json
@@ -2,12 +2,13 @@
     "development": {
         "username": "postgres",
         "password": "password",
-        "database": "postgres",
-        "host": "localhost",
+        "database": "todo-dev",
+        "host": "db-dev",
         "dialect": "postgres",
         "operatorsAliases": "Op",
         "jwtSecret": "babura"
     },
+
     "test": {
         "username": "postgres",
         "password": "password",
