--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "formik": "^1.5.2",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "query-string": "^6.4.2",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.3",
