--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.11.0",
     "query-string": "^6.4.2",
     "react": "^16.8.3",
+    "react-avatar-editor": "^11.0.7",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.3",
     "react-input-mask": "^2.0.4",
