--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .idea
 ./client/node_modules
 ./server/node_modules
+./client/.idea
+./server/.idea
+/client/.idea
+/server/.idea
 # Logs
 logs
 *.log
